--- a/style.css
+++ b/style.css
@@ -5,34 +5,47 @@
     -moz-user-select: -moz-none;
     -o-user-select: none;
     user-select: none;
+    margin: 0px;
+    padding: 0px;
     
 }
 
 body, html {
     /* The image used */
-    background-image: url("Background.jpg");
-  
+    /* background-image: url("Background.jpg"); */
+    /* background-color: #002B5B; */
+    background-image: linear-gradient(45deg, #002B5B 21%, #8FE3CF 65%);
     /* Full height */
     height: 100%;
-  
+    margin: 0px;
+    padding: 0px;
     /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    /* background-position: center; */
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
+  }
+
+  .container{
+    margin: 15px;
+    padding: 0px;
   }
 
 
 h1{
     color: #FFF;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(11,11,163,1) 35%, rgba(0,212,255,1) 100%);
+    /* background: rgb(2,0,36); */
+    /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(11,11,163,1) 35%, rgba(0,212,255,1) 100%); */
 }
+
+
 
 /*navbar*/
 /* Add a black background color to the top navigation */
 .simple-nav {
-    background-color: #333;
+    /* background-color: #47B5FF; */
     overflow: hidden;
+    /* position: absolute; */
+    /* justify-content: center; */
   }
   
   /* Style the links inside the navigation bar */
@@ -40,19 +53,35 @@ h1{
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 30px;
     text-decoration: none;
     font-size: 17px;
+    font-weight: 600;
   }
   
   /* Change the color of links on hover */
   .simple-nav a:hover {
-    background-color: #ddd;
-    color: black;
+    /* background-color: #ddd; */
+    color: #8FE3CF;
   }
   
   /* Add a color to the active/current link */
   .simple-nav a.active {
-    background-color: #04218c;
-    color: white;
+    /* background-color: #04218c; */
+    color: #8FE3CF;
+  }
+
+.my-4 input{
+  box-shadow: 6px 6px 5px 0.5px #2b4865;
+}
+
+  #searchbtn{
+    background-color: antiquewhite;
+    box-shadow: 6px 6px 5px 0.5px #2b4865;
+    font-weight: 600;
+  }
+
+  .table-warning{
+    color: #607EAA;
+    box-shadow: 6px 6px 5px 0.5px #2b4865;
   }
