--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body, html {
     background-image: url("Background.jpg");
   
     /* Full height */
-    height: 100%;
+    min-height: 100%;
   
     /* Center and scale the image nicely */
     background-position: center;
