--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body, html {
     background-image: url("Background.jpg");
   
     /* Full height */
-    height: 100%;
+    min-height: 100vh;
   
     /* Center and scale the image nicely */
     background-position: center;
@@ -26,8 +26,11 @@ h1{
     color: #FFF;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(11,11,163,1) 35%, rgba(0,212,255,1) 100%);
-}
-
+  }
+  
+  h1, .simple-nav{
+    border-radius: 2px;
+  }
 /*navbar*/
 /* Add a black background color to the top navigation */
 .simple-nav {
